fixed header spacing in header and card spacing in main container

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,10 +63,13 @@ ul li a:hover {
   align-items: center;
   width: 100%;
   background: var(--cool-black);
-  padding: 70px;
+  padding: 100px;
 }
 header {
-  margin-left: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-basis: 50%;
 }
 .header-main {
   font-size: 48px;
@@ -108,12 +111,15 @@ header button {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 40px;
   text-align: center;
+  gap: 20px;
   margin: 30px 0 30px 0;
 }
 .cards img {
   border: solid 5px var(--cool-blue);
   border-radius: 10px;
+}
+
+.cards .card-text {
+  width: 200px;
 }
